updated skills and index page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
         <p class="hero-subtitle">M2 Artificial Intelligence & Data Science (IASD)</p>
         <p class="hero-institution">PSL University (Mines, ENS and Dauphine)</p>
 
-        <!-- <div class="dynamic-text" aria-live="polite">
-          <span id="rotating-text">AI Researcher</span>
-        </div> -->
+        
 
         <p class="hero-description">
           I recently completed an M2 in Artificial Intelligence & Data Science from PSL University (Mines, ENS and Dauphine) and an M1 in Applied Mathematics & Statistics from École Polytechnique, IP Paris. 
@@ -65,12 +63,12 @@
           <a class="btn btn-secondary" href="contact.html" aria-label="Contact page">Contact</a>
         </div>
 
-        <div class="interest-tags" aria-hidden="true">
+        <!-- <div class="interest-tags" aria-hidden="true">
           <span>Optimization</span>
           <span>Machine Learning</span>
           <span>Statistics</span>
           <span>Privacy</span>
-        </div>
+        </div> -->
 
         <!-- <p class="current-focus">
           🔬 <strong>Currently exploring:</strong> Explainable AI for constrained optimization
@@ -195,7 +193,18 @@
   <!-- CONTACT CTA -->
   <section class="section contact-cta container" id="contact" aria-labelledby="contact-title">
     <h2 id="contact-title">Let’s collaborate</h2>
-    <p class="muted">Open to research based positions, PhD opportunities, and collaborations. Email: <a href="mailto:kanupriya.jain@dauphine.eu">kanupriya.jain@dauphine.eu</a></p>
+    <p class="muted">Open to research based positions, PhD opportunities, and collaborations. 
+      <!-- Email: <a href="mailto:kanupriya.jain@dauphine.eu">kanupriya.jain@dauphine.eu</a> -->
+    </p>
+
+    <div class="contact-actions" style="margin-top:1rem;">
+    <a href="mailto:kanupriya.jain@dauphine.eu" class="btn btn-primary" aria-label="Send email to Kanupriya">
+      <i class="fas fa-envelope"></i> Email Me
+    </a>
+    <a href="contact.html" class="btn btn-secondary" aria-label="Go to contact page">
+      <i class="fas fa-paper-plane"></i> Contact Page
+    </a>
+  </div>
     
   </section>
 
