--- a/skills.html
+++ b/skills.html
@@ -203,7 +203,7 @@
             <h2><i class="fas fa-palette"></i> Art</h2>
             <p style="color:var(--text-color); opacity:0.9;">
               I enjoy sketching and painting in my free time. You can explore some of my artwork 
-              <a href="https://www.instagram.com/YOUR_ART_PAGE/" target="_blank" rel="noopener" style="color:var(--accent-color); text-decoration:none;">here</a>.
+              <a href="https://www.instagram.com/kanupriya2406/" target="_blank" rel="noopener" style="color:var(--accent-color); text-decoration:none;">here</a>.
             </p>
             <br/>
             <h2><i class="fas fa-music"></i> Dance</h2>
