--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
+  <!-- <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
     <div class="nav-container">
       <div class="brand nav-brand">Kanupriya</div>
 
@@ -148,7 +148,36 @@
         <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme"><i class="fas fa-moon"></i></button>
       </div>
     </div>
-  </nav>
+  </nav> -->
+  <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
+  <div class="nav-container">
+    <!-- BRAND (not a hyperlink) -->
+    <div class="brand nav-brand" aria-hidden="false">Kanupriya</div>
+
+    <!-- hamburger for mobile -->
+    <button id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+
+    <!-- NAV ACTIONS: links + theme toggle grouped so spacing is easy to control -->
+    <div class="nav-actions" role="group" aria-label="Navigation links and theme toggle">
+      <ul id="primary-menu" class="nav-menu" role="menu" aria-hidden="false">
+        <li role="none"><a role="menuitem" href="index.html" class="nav-link">Home</a></li>
+        <li role="none"><a role="menuitem" href="projects.html" class="nav-link">Projects</a></li>
+        <li role="none"><a role="menuitem" href="experience.html" class="nav-link">Experience</a></li>
+        <li role="none"><a role="menuitem" href="education.html" class="nav-link">Education</a></li>
+        <li role="none"><a role="menuitem" href="skills.html" class="nav-link">Skills</a></li>
+        <li role="none"><a role="menuitem" href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+
+      <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+        <i class="fas fa-moon"></i>
+      </button>
+    </div>
+  </div>
+</nav>
 
   <!-- MAIN -->
   <main class="page-wrapper" role="main">
