Update email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
 
     <div class="contact-card">
       <div class="contact-links">
-        <a href="mailto:kanupriya.jain@dauphine.edu"><i class="fas fa-envelope"></i> kanupriya.jain@dauphine.edu</a>
+        <a href="mailto:kanupriya.jain@dauphine.eu"><i class="fas fa-envelope"></i> kanupriya.jain@dauphine.eu</a>
         <a href="https://www.linkedin.com/in/kanupriya-jain-719781200/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i> LinkedIn</a>
         <a href="https://github.com/kanu2406" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a>
       </div>
@@ -162,7 +162,7 @@
       <div class="social-icons">
         <a href="https://github.com/kanu2406" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/kanupriya-jain-719781200/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:kanupriya.jain@dauphine.edu" aria-label="Email"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:kanupriya.jain@dauphine.eu" aria-label="Email"><i class="fas fa-envelope"></i></a>
       </div>
 
       <p class="footer-note">📍 Based in Paris, France | Available worldwide</p>
